Fix ordering of spotlight sections on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -725,7 +725,7 @@
 }
 
 @media screen and (min-width: 60em) {
-    .atx-home .atx-spotlight__feature:nth-child(odd) {
+    .atx-home .atx-spotlight__feature:nth-child(even) {
         flex-direction: row-reverse
     }
 }
